--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,20 @@
 <html>
   <head>
     <title>Embark</title>
-    <link rel="stylesheet" href="css/app.css">
-    <script src="js/app.js"></script>
+    <!-- <link rel="stylesheet" href="css/app.css"> -->
+    <!-- <script src="js/app.js"></script> -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h3>Welcome to Embark!</h3>
-    <p>See the <a href="https://framework.embarklabs.io/docs/quick_start.html" target="_blank">Embark's documentation</a> to see what you can do with Embark!</p>
+    <div id="root"></div>
+    <!-- <h3>Welcome to Embark!</h3>
+    <p>See the <a href="https://framework.embarklabs.io/docs/quick_start.html" target="_blank">Embark's documentation</a> to see what you can do with Embark!</p> -->
+    
   </body>
+  <script src="js/app.js"></script>
 </html>
